# huskydoc

./: .travis.yml  README.md  huskydoc.cabal  stack.yaml
app/: Main.hs
src/Text/: Huskydoc.hs
src/Text/Huskydoc/: Attributes.hs  Blocks.hs  Builders.hs  Document.hs  Inlines.hs  Pandoc.hs  Parsing.hs  Patterns.hs  Table.hs  Types.hs
test/: Spec.hs
test/Text/Huskydoc/: AttributesSpec.hs  BlocksSpec.hs  DocumentSpec.hs  InlinesSpec.hs  ParsingSpec.hs  TableSpec.hs
