name:                huskydoc
version:             0.1.0.0
synopsis:            An Asciidoc markup parser
description:         Please see README.md
homepage:            https://github.com/tarleb/huskydoc#readme
license:             ISC
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@moltkeplatz.de
copyright:           Albert Krewinkel
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Huskydoc
                     , Text.Huskydoc.Attributes
                     , Text.Huskydoc.Inlines
                     , Text.Huskydoc.Parsing
  build-depends:       base             >= 4.7 && < 5
                     , containers       >= 0.1 && < 0.6
                     , data-default     >= 0.4 && < 0.8
                     , megaparsec       >= 4.4 && < 5.1
                     , text             >= 1.2 && < 1.3
                     , transformers     >= 0.4 && < 0.6
  default-language:    Haskell2010
  Ghc-Options:         -Wall -fno-warn-unused-do-bind

executable huskydoc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , huskydoc
  default-language:    Haskell2010

test-suite huskydoc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Text.Huskydoc.AttributesSpec
                     , Text.Huskydoc.InlinesSpec
                     , Text.Huskydoc.ParsingSpec
  build-depends:       base
                     , huskydoc
                     , hspec            >= 2.2 && < 2.3
                     , hspec-discover   >= 2.2 && < 2.3
                     , hspec-megaparsec >= 0.1 && < 0.3
                     , megaparsec       >= 4.4 && < 5
                     , text             >= 1.2 && < 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tarleb/huskydoc
